--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -19,6 +19,9 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v2
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
@@ -37,7 +40,7 @@ jobs:
 
     - name: Zipalign APK
       run: |
-        ${{ github.workspace }}/android-sdk/build-tools/$(ls ${{ github.workspace }}/android-sdk/build-tools | sort -V | tail -1)/zipalign -v 4 \
+        ${{ env.ANDROID_HOME }}/build-tools/$(ls ${{ env.ANDROID_HOME }}/build-tools | sort -V | tail -1)/zipalign -v 4 \
           app/build/outputs/apk/release/app-release-unsigned.apk \
           app/build/outputs/apk/release/app-release-signed-aligned.apk
 
