--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="net.backslasher.dndtoggle"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
@@ -16,7 +17,7 @@
         tools:targetApi="31">
 
         <service
-            android:name=".DnDTileService"
+            android:name="net.backslasher.dndtoggle.DnDTileService"
             android:exported="true"
             android:icon="@drawable/ic_dnd_off"
             android:label="@string/tile_label"
@@ -27,7 +28,7 @@
         </service>
 
         <activity
-            android:name=".MainActivity"
+            android:name="net.backslasher.dndtoggle.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
