--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -45,14 +45,20 @@ jobs:
           --out app/build/outputs/apk/release/app-release-signed.apk \
           app/build/outputs/apk/release/app-release-unsigned-aligned.apk
 
+    - name: Get Version Name
+      id: get_version
+      run: |
+        VERSION_NAME=$(grep 'versionName' app/build.gradle.kts | awk -F'"' '{print $2}')
+        echo "::set-output name=version_name::$VERSION_NAME"
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ github.run_number }}
-        release_name: Release v${{ github.run_number }}
+        tag_name: v${{ steps.get_version.outputs.version_name }}
+        release_name: Release v${{ steps.get_version.outputs.version_name }}
         draft: false
         prerelease: false
 
