--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -70,5 +70,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: app/build/outputs/apk/release/app-release-signed.apk
-        asset_name: dnd-toggle-v${{ github.run_number }}.apk
+        asset_name: dnd-toggle-v${{ steps.get_version.outputs.version_name }}.apk
         asset_content_type: application/vnd.android.package-archive
